...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="8dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSHIL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="true"
            android:src="@mipmap/ic_hexagram"
            app:backgroundTint="@color/SHILcolor" />
...
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/fab_shil"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/filledSHIL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/slash1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/requiredSHIL"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="8dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDOLR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="true"
            android:src="@mipmap/ic_hexagram"
            app:backgroundTint="@color/DOLRcolor"
...
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/fab_dolr"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/filledDOLR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/slash1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/requiredDOLR"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/slash1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/requiredQUID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="8dp">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPENY"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="true"
            android:src="@mipmap/ic_hexagram"
            app:backgroundTint="@color/PENYcolor"
...
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/peny_fab"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/filledPENY"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/slash1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/requiredPENY"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:gravity="center"
            android:text="@string/zero"
            android:textSize="18sp" />
...
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/purity_"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/purityView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/_100"
            android:textSize="18sp" />
...
